# pioneer-robotics-suite

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  build.sh  compose.yaml  default.rviz  messages.txt  msg  ros_entrypoint.sh
src/p3at_bringup/: CMakeLists.txt  package.xml
src/p3at_bringup/config/: ekf.yaml  imu.yaml  lidar.yaml  nav2_params.yaml  slam_params.yaml
src/p3at_bringup/launch/: bringup.launch.py  display.launch.py  exploring.launch.py  lidar.launch.py  localization.launch.py  navigation.launch.py  slam.launch.py  spatial.launch.py
src/p3at_bringup/maps/: map.pgm  map.yaml
src/p3at_bringup/rviz/: display.rviz  display2.rviz
src/p3at_bringup/urdf/: pioneer.urdf.xacro
src/p3at_controller/: CMakeLists.txt  package.xml
src/p3at_controller/config/: controller.yaml  emergency.yaml  joy_control.yaml
src/p3at_controller/launch/: controller.launch.py
src/p3at_cpp_nodes/: CMakeLists.txt  package.xml
src/p3at_cpp_nodes/src/: emergency_stop.cpp  explore.cpp  explore2.cpp  goal_client.cpp  joy_control.cpp  joy_input.cpp  odom_node2.cpp  test_lidar.cpp
src/p3at_interface/: CMakeLists.txt  package.xml
src/p3at_interface/msg/: Distance.msg  ObjectInfo.msg
src/p3at_vision/: package.xml  setup.cfg  setup.py
src/p3at_vision/launch/: vision.launch.py
src/p3at_vision/msg/: ObjectInfo.msg
src/p3at_vision/p3at_vision/: .digitRecognitionNode.py.swp  digitRecognitionNode.py  gui.py  imageRecognitionNode.py  marker_node.py  obstacle_detector.py
